--- a/College/9_MYSQL/.env
+++ b/College/9_MYSQL/.env
@@ -1,4 +1,4 @@
-DB_CONNECT = mongodb+srv://아이디:비번@shleedosa.1dvml.mongodb.net/myContacts?retryWrites=true&w=majority
+DB_CONNECT = mongodb+srv://han:020220hgh@cluster0.gtkoj9p.mongodb.net/?appName=Cluster0
 
-DB_CONNECT_ID = admin아이디
-DB_CONNECT_PW = 비번
+DB_CONNECT_ID = root
+DB_CONNECT_PW = 020220hgh
